Add zip archive image
