# PocketCenter/PocketActionService/internal/router/router.go
@@ -1,6 +1,7 @@
 package router
 
 import (
+	"net/http"
 	"pocketaction/internal/handlers"
 
 	"github.com/gin-gonic/gin"
@@ -11,6 +12,7 @@ import (
 
 func InitRoutes(handler *handlers.PocketActionHandler) *gin.Engine {
 	r := gin.Default()
+	r.StaticFS("/prez", http.Dir("./presentation"))
 	apiRoutes := r.Group("/action")
 	{
 		apiRoutes.GET("/action-composed", handler.HandleReceiver)
@@ -19,6 +21,7 @@ func InitRoutes(handler *handlers.PocketActionHandler) *gin.Engine {
 		apiRoutes.GET("/version", handler.HandleVersion)
 		apiRoutes.GET("/document", handler.HandlePocketActionDocument)
 		apiRoutes.GET("/presentation", handler.HandlePresentation)
+		apiRoutes.GET("/presentation-zip", handler.HandlePresentationZip)
 	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	return r
